# hello_mlflow

./: .env.sample  agent.py  compose.yml  pyproject.toml
samples/1_decorator_cliapp/: .env.sample  agent.py  compose.yml  pyproject.toml
samples/1_decorator_cliapp/.devcontainer/: devcontainer.json
samples/2_otel_cliapp_notool/: .env.sample  .gitignore  agent-azure-without-langchain.py  agent-azure.py  agent.py  compose.yml  opentelemetry-collector.yaml  pyproject.toml
samples/2_otel_cliapp_notool/.devcontainer/: Dockerfile  devcontainer.json
